Fix rounding in wrap around mode for some operations

This fixes the rounding error for negative coordinates in wrap around
mode for the colour picker, fill tool and continuous selection tool.

BUG: 383894
Differential Revision: https://phabricator.kde.org/D8894